<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlasticBank.MainActivityBank"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/userDetail"
        layout="@layout/user_detail_layout" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/userDetail"
        android:layout_marginTop="-30dp"
        android:background="@drawable/layout_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/menu_icons"
                android:id="@+id/menubar"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menubar"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btnUpdateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:drawableTint="@color/grey_40"
                    android:text="@string/update_your_profile"
                    android:drawablePadding="16dp"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/colorWhite"
                    android:padding="20dp"
                    app:drawableLeftCompat="@drawable/ic_update_user" />

                 <TextView
                    android:id="@+id/btnShowLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawableTint="@color/grey_40"
                    android:drawablePadding="6dp"
                    android:text="@string/show_current_location"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/colorWhite"
                    android:padding="20dp" />

                <TextView
                    android:id="@+id/btnCurrentRequest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_current_request"
                    android:drawableTint="@color/grey_40"
                    android:text="@string/current_request"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/colorWhite"
                    android:padding="20dp" />

                <TextView
                    android:id="@+id/btnAboutUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_about_us"
                    android:drawableTint="@color/grey_40"
                    android:text="@string/about_us"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/colorWhite"
                    android:padding="20dp" />

                <TextView
                    android:id="@+id/btnContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="20dp"
                    android:drawableLeft="@drawable/ic_contact_us"
                    android:drawableTint="@color/grey_40"
                    android:text="@string/contact_us"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:background="@drawable/layout_bg"
                    android:backgroundTint="@color/colorWhite"
                    android:padding="20dp" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>